Fix image alignment bug.

--- a/src/app/post/display-all-posts/display-all-posts.component.css
+++ b/src/app/post/display-all-posts/display-all-posts.component.css
@@ -15,5 +15,9 @@ hr {
 }
 
 img {
-    padding-top: 3%;
+    margin-top: 3%;
+}
+
+button {
+    margin-bottom: 1%;
 }
